--- a/alpha/event/static/styles/modal.css
+++ b/alpha/event/static/styles/modal.css
@@ -26,3 +26,26 @@
         border:3px solid #ccc; 
     }  
 }
+
+.balloon {
+    float:right;    
+    position:relative;
+    top:-3px;
+}
+
+.balloon.wheelchair {
+    float:none;
+    display:inline-block;
+    position:relative;
+    top:10px;
+}
+
+#entry-form {
+    padding: 20px 20px;
+    border: 1px solid #ccc;
+    width:650px;
+}
+
+#entry-form table tr td:nth-of-type(2){
+    padding-left:30px;
+}
