--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
+{% load cropping %}
 {% block title %} > View > {{ event.name }}{% endblock %}
 
-{% block opengraph %}
-    {% if opengraph %}
-        {% for prop, value in opengraph.items %}
-            <meta property="{{ prop }}" content="{{ value }}"/>
-        {% endfor %}
+{% block head %}
+    <meta property="og:title" content="{{event.name}}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://{{ request.META.HTTP_HOST }}/events/view/{{event.slug}}/" />
+    {% if event.picture %}
+        <meta property="og:image" content="http://{{ request.META.HTTP_HOST }}{% cropped_thumbnail event "cropping" width=200 %}" />    
+    {% else %}
+        <meta property="og:image" content="http://{{ request.META.HTTP_HOST }}{{STATIC_URL}}images/default-event.jpg" />
     {% endif %}
-{% endblock %}
+    <meta property="og:site_name" content="Cityfusion" />
+    <meta property="og:description" content="{{event.description}}" />
+    <meta property="fb:admins" content="100000796428679" />
+{% endblock %}    
+
 
 {% block page %}
 
