--- a/alpha/event/templates/events/search_pad.html
+++ b/alpha/event/templates/events/search_pad.html
@@ -3,8 +3,17 @@
 {% load cropping %}
 
 {% block head %}
+
+    <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/browse.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/featured_events.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/jump_popup.css" rel="stylesheet" type="text/css" />    
+    
+    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
+    <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/searchpad.js" type="text/javascript"></script>
 {% endblock %}
 
 {% comment %}
@@ -29,25 +38,18 @@ of dates in the header
 {% block title %} 
     &gt; Browse {% if page_date != "flow" %}&gt; {{page_date|slug_to_title }}{% endif %}
 {% endblock %}
-{% block page %}
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $("#date").datepicker({
-                buttonImage: '{{STATIC_URL}}images/jump-to-date.png',
-                buttonImageOnly: true,
-                dateFormat: 'yy-mm-dd',
-                changeMonth: true,
-                changeYear: true,
-                showOn: 'both',
-                onClick: window.jumpToDate, 
-                toggles: true,
-                onSelect: function(dateText, inst) {
-                    window.location.replace("http://cityfusion.ca/events/all/" + dateText) // make your AJAX call!
-                }
-            }); //make the datepicker appear!
-        });         
-    </script>
 
+{% block page %}
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=241160805895511";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
     {% if messages %}
         <div class="msg">
             <ul class="messages">
@@ -59,203 +61,53 @@ of dates in the header
     {% endif %}
 
     <div class="wrapper">
-        <div class="page-container">    
-            <div class="featured-area">
-                <h2>Featured Events</h2>
-                <div class="features-wrapper">
-                <!--start.featured_events-->    
-                    {% for event in featured_events.object_list %}
-                        <div class="features">
-                            <div class="featured-img-wrapper">
-                                {% if event.picture %}
-                                    <img src="{% cropped_thumbnail event "cropping" width=154 %}" height="153px" weight="154px">
-                                {% else %}
-                                    <img src="{{STATIC_URL}}images/default-event.jpg" height="153px" weight="154px">
-                                {% endif %}
-                            </div>
-                            <div class="featured-img-details">
-                                <div class="featured-img-details-wrapper">
-                                    <div class="featured-title">
-                                        <a href="/events/view/{{event.slug}}">{{event.name}}</a>
-                                    </div>
-                                    <div class="featured-date">                                                                            
-                                        {{ event.next_day.start_time|date:"b d" }} | {{ event.venue.name }}                                        
-                                    </div>
-                                    <div class="featured-details-link">
-                                        <a href="/events/view/{{event.slug}}/">
-                                            event details
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {%endfor%}
-                <!--end.features-->
-                <div class="clr"></div>
-            </div>
-            <!--start.features-navigation-->
-            <div class="features-navigation">
-                <ul>
-                    <span class="step-links">
-                        {% if featured_events.has_previous %}
-                            <a class="prev" href="?featured_page={{ featured_events.previous_page_number }}&search_pad_page={{ search_pad_events.number }}">
-                                prev
-                            </a>
-                            <a href="?featured_page=1&search_pad_page={{ search_pad_events.number }}">
-                                &lt;&lt;
-                            </a>
-                        {% endif %}
+        <div class="page-container">
+            {% include 'events/_event_featured.html' %}       
 
-                        {% for page in featured_events.paginator.page_range %}
-                            <a href="?featured_page={{ page }}&search_pad_page={{ search_pad_events.number }}" 
-                                {% ifequal featured_events.number page %}class="current"{%endifequal%}>
-                                {{ page }}
-                            </a>
-                        {% endfor %}                        
+            <div class="content-wrapper">
+            	<div class="content-wrapper-panel">
+                    <!--start.main-content-wrapper-->
+                    <div class="main-content-wrapper">
+                    	<h1>Search Pad</h1>
+                        <div class="main-content">
+                    	   <!--start.main-navigation-->
                         
-                        {% if featured_events.has_next %}
-                            <a href="?featured_page={{ featured_events.paginator.num_pages }}&search_pad_page={{ search_pad_events.number }}">
-                                &gt;&gt;
-                            </a>
-                            <a class="prev" href="?featured_page={{ featured_events.next_page_number }}&search_pad_page={{ search_pad_events.number }}">
-                                next
-                            </a>
-                        {% endif %}
-                    </span>
-                </ul>
-            </div>    
-            <!--end.features-navigation-->
-        </div> 
-
-        <div class="content-wrapper">
-        	<div class="content-wrapper-panel">
-                <!--start.main-content-wrapper-->
-                <div class="main-content-wrapper">
-                	<h1>Search Pad</h1>
-                    <div class="main-content">
-                	   <!--start.main-navigation-->
-                    
-                        <div class="main-navigation">
-                            <!--start.main-navigation-nav-->
-                            <div class="main-navigation-nav">
-                        	   <div class="main-navigation-nav-wrapper">
-                                    <ul class="categories">
-                                        <li class="header">Browse All Events({{events|length}})</li>
-                                        <li class="subcat"><a href="/events/free/this-week/" >&#8250;&#8250; All this week</a></li>
-                                        <li class="subcat">
-                                            <a href="/events/free/">&#8250;&#8250; Featured events</a>
-                                        </li>
-                                        {%for tag in all_tags%}
-                                            {%if tag.slug = ''%}
-                                                <li {% if forloop.counter0 > 9 %}{%endif%} class="blue"><a href="/events/">{{tag.name}}</a></li>
-                                            {%else%}
-                                                <li {% if forloop.counter0 > 9 %} {% endif %} class="blue"><a href="{% url 'event_browse_tags' old_tags=tag.slug%}">{{tag.name}}</a></li>
-                                            {%endif%}
-                                        {%endfor%}
-                                        {% if all_tags|length > 9 %}
-                                            <li id="tags_more"><a href="#" class="more"><span class="tickbox"><span class="downtick"></span></span>More</a></li>
-                                            <li id="tags_less" style="display: none; "><a href="#" class="more"><span class="tickbox"><span class="uptick"></span></span>Fewer</a></li>
-                                        {% endif %}
-                                    </ul>
-                                </div>
-                            </div>                        
-                            <!--end.main-navigation-nav-->
-                        
-                            <!--start.main-navigation-content-nav-->
-                        
-                            <div class="main-navigation-content-nav">
-                                <div class="main-navigation-content-nav-wrapper">
-                                    <!--start.schedule-bar-->
+                            <div class="main-navigation">
+                                <!--start.main-navigation-nav-->
+                                {% include 'events/_searchpad_left_menu.html' %}
+                                <!--end.main-navigation-nav-->
                             
-                                    <div class="schedule-bar">
-                                        <div class="schedule-bar-wrapper">
-                                            <ul>
-                                                <li><a  href="/events/all/today/" class="jump">Today</a></li>
-                                                <li><a  href="/events/all/tomorrow/" class="jump">Tomorrow</a></li>
-                                                <li><a  href="/events/all/this-weekend/"  class="jump">This weekend</a></li>
-                                                <li><a  href="/events/all/next-week/" class="current">Next week</a></li>
-                                                <li>
-                                                    <div style="background-color: white; border: solid thin #CCC; border-radius: 5px; height:21px;"><input type="hidden" id="date"/></div>
-                                                </li>                                            
-                                                <div class="clr"></div>
-                                            </ul>
-                                        </div>
-                                    </div>                                
-                                    <!--end.schedule-bar-->
-                      
-                                    <!--start.entry-wrapper-->
-                                    {% for event in search_pad_events.object_list %}    
-                                        {% load event_pictures %}
-                                        <div class="result-entry-info">
-                                            <div class="entry-img-prev">
-                                                <img src="{% event_picture_url 'event' 200 %}" length="72px" width="71px">
-                                            </div>
-                                            <div class="entry-details-wrapper">
-                                                <div class="title-wrapper">
-                                                    <div class="title"><a href="/events/view/{{event.slug}}/">{{event.name}}</a></div>
-                                                    <div class="clr"></div>        
-                                                </div>
-                                                
-                                                <div class="entry-date-wrapper">
-                                                     {{event.start_time}}
-                                                </div>                                               
-                                                <div class="entry-description">
-                                                    {{ event.venue.name }}<br>
-                                                    {{ event.venue.street }}<br>
-                                                    {{ event.venue.city.name_std }}
-                                                </div>                                               
-                                            </div>
-                                            <div class="clr"></div>
-                                       </div>
-                                           
-                                    {%endfor%}
-                                    <div class="clr"></div>
-                                    <div class="entry-navigation-np">
-                                        <p>
-                                            <ul>
-                                                <span class="step-links">
-                                                    <!--TODO: Fix this strange layout-->
-                                                    {% if search_pad_events.has_previous %}
-                                                        <a href="?search_pad_page={{ search_pad_events.previous_page_number }}&featured_page={{ featured_events.number }}">
-                                                            <img src="{{STATIC_URL}}images/entry-prev.png">
-                                                        </a>
-                                                    {% endif %}                                                    
-                                                    {%if search_pad_events.num_pages > 1%}
-                                                        <span class="current">
-                                                            Page {{ search_pad_events.number }} of {{ search_pad_events.paginator.num_pages }}.
-                                                        </span>
-		                                            {%endif%}
-                                                    {% if search_pad_events.has_next %}
-                                                        <a href="?search_pad_page={{ search_pad_events.next_page_number }}&featured_page={{ featured_events.number }}">
-                                                            <img src="{{STATIC_URL}}images/entry-next.png">
-                                                        </a>
-                                                    {% endif %}                                                    
-                                                </span>
-                                            </ul>
-                                        </p>
+                                <!--start.main-navigation-content-nav-->
+                            
+                                <div class="main-navigation-content-nav">
+                                    <div class="main-navigation-content-nav-wrapper">
+                                        <!--start.schedule-bar-->
+                                        {% include 'events/_searchpad_datetime_menu.html' %}
+                                        <!--end.schedule-bar-->
+                          
+                                        <!--start.entry-wrapper-->
+                                        {% include 'events/_event_details.html' %}
                                     </div>
-                                    <!--end.entry-->                            
                                 </div>
-                            </div>                        
-                            <!--end.main-navigation-content-nav-->                        
-                            <div class="clr"></div>                    
-                        </div>                    
-                        <!--end.main-navigation-->
+                                <!--end.main-navigation-content-nav-->                        
+                                <div class="clr"></div>                    
+                            </div>
+                            <!--end.main-navigation-->
+                        
+                            <!--start.right-navigation-->                    
+                            <!--<?php include("rightside.php");?>-->                    
+                            <!--end.right-navigation-->
                     
-                        <!--start.right-navigation-->                    
-                        <!--<?php include("rightside.php");?>-->                    
-                        <!--end.right-navigation-->
-                
-                        <div class="clr"></div>                
+                            <div class="clr"></div>                
+                        </div>
                     </div>
-                </div>
-                <!--end.main-content-wrapper-->        
-            </div>    
-        </div>    
+                    <!--end.main-content-wrapper-->        
+                </div>    
+            </div>
+        </div>
         <!--end.content-wrapper-->             
     </div>
-</div>
-<!--jQuery-->
+
 	
-<script src="{{STATIC_URL}}popup/js/jquery.reveal.js"></script>
+    <script src="{{STATIC_URL}}popup/js/jquery.reveal.js"></script>
 {% endblock %}
