--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -310,6 +310,7 @@ body
 	border-radius:10px;
 	padding:10px 0px 10px 10px;
 	color:#fff;
+	margin: 0 auto;
 }
 
 .featured-area h2
@@ -354,7 +355,7 @@ body
 .featured-img-details-wrapper
 {
 	width:auto;
-	padding:8px 5px;
+	padding:3px 5px;
 	font-size:10px;
 }
 
@@ -441,118 +442,7 @@ body
 {
 	color:#ff9e00;
 }
-.main-navigation
-{
-	float:left;
-	width:690px;
-	border:1px solid #ccc;
-}
 
-.main-navigation-nav
-{
-	float:left;
-	width:206px;
-}
-
-.main-navigation-nav-wrapper
-{
-	width:auto;
-	padding:20px 10px 20px 20px;
-}
-.main-navigation-nav-wrapper ul.categories
-{
-	margin:0px;
-	padding:0px;
-	list-style:none;	
-}
-
-.main-navigation-nav-wrapper ul.categories li
-{
-	margin-bottom:1px;
-	position:relative;
-}
-
-.main-navigation-nav-wrapper ul.categories li .active a
-{
-	background: url(/static/images/category-nav-bullets-plus.png) right no-repeat !important;
-	width:auto !important;
-	height:auto !important;
-	position:absolute;
-	z-index:11;
-	top:6px;
-	right:10px;
-}
-.main-navigation-nav-wrapper ul.categories li .active a:hover
-{
-	background: url(/static/images/category-nav-bullets.png) right no-repeat !important;
-	color:#FFF;
-	width:auto !important;
-	height:auto !important;
-	
-}
-
-
-.main-navigation-nav-wrapper ul.categories li.subcat
-{
-	background:url(/static/images/yellow1.png) repeat-x !important;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	height:30px;
-	margin:4px 0;
-}
-
-
-.main-navigation-nav-wrapper ul.categories li a
-{
-	display:block;
-	padding:8px;
-	background:#e3e3e3;
-	color:#000;
-	text-decoration:none;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-}
-.main-navigation-nav-wrapper ul.categories li a:hover
-{
-	background:url(/static/images/yellow.png) repeat-x !important;
-	color:#FFF;
-}
-.main-navigation-nav-wrapper ul.categories li.blue a:hover
-{
-	background:url(/static/images/yellow.png) repeat-x !important;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	padding-left:40px;
-	color:#fff;
-	font-weight:bold;
-}
-
-.main-navigation-nav-wrapper ul.categories li.blue a
-{
-	background:url(/static/images/blue.png) repeat-x !important;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	padding-left:40px;
-	color:#fff;
-	font-weight:bold;
-}
-.main-navigation-nav-wrapper ul.categories .header{
-	display:block;
-	padding:8px;
-	background:#e3e3e3;
-	color:#000;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	height:20px;
-	font-weight:bold;
-	font-size:15px;
-	line-height:20px;
-}
 
 .menu-wrapper {
 	width:1200px;
@@ -776,7 +666,8 @@ body
 	border:1px solid #ddd;
 }
 
-.schedule-bar-wrapper ul li a:hover
+.schedule-bar-wrapper ul li a:hover,
+.schedule-bar-wrapper ul li a.active
 {
 	background:#ffa107;
 	color:#fff;
