--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang='en_US'>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>City Fusion</title>
-
+    
     <link href="{{STATIC_URL}}styles/styles.css" rel="stylesheet" type="text/css" />
 
     <link type="text/css" href="{{STATIC_URL}}date/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
 
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.8.0.min.js"></script>
-    <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.8.23.custom.min.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.8.23.custom.min.js"></script>    
+
     <script src="{{STATIC_URL}}js/validate.js" type="text/javascript"></script>
 
 
