--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -8,11 +8,17 @@
     <link href="{{STATIC_URL}}styles/browse/browse.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/browse_event_list.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/featured_events.css" rel="stylesheet" type="text/css" />
+
+    <link href="{{STATIC_URL}}styles/browse/search_tags.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />    
+    <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/jump_popup.css" rel="stylesheet" type="text/css" />    
-    
+
+    <script src="{{STATIC_URL}}js/tagit.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/auctions-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/browse-page.js" type="text/javascript"></script>
@@ -65,7 +71,14 @@
                             <div class="main-navigation-content-nav-wrapper">
                                 <!--start.schedule-bar-->
                                 {% include 'events/_searchpad_datetime_menu.html' %}
-                                <!--end.schedule-bar-->                  
+                                <!--end.schedule-bar-->
+
+                                <ul id="searchTags">
+                                    {% for tag in eventsFilter.search_tags %}
+                                        <li data-remove-url="{{ tag.remove_url }}">{{ tag.name }}</li>
+                                    {% endfor %}
+                                    <span class="search-button"></span>
+                                </ul>
                                 
                                 {% include 'events/_browse_events_list.html' %}
                             </div>
