--- a/alpha/event/templates/events/search_pad.html
+++ b/alpha/event/templates/events/search_pad.html
@@ -7,34 +7,20 @@
     <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/browse.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/featured_events.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/search_tags.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/jump_popup.css" rel="stylesheet" type="text/css" />    
+
+    <script src="{{STATIC_URL}}js/tagit.js" type="text/javascript"></script>
     
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
+    <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/searchpad.js" type="text/javascript"></script>
 {% endblock %}
 
-{% comment %}
-browse_events.html
---------------------------------------
-This is the event browser.
-Incoming context has:
-all_tags: a container of tags associated with events that could be
-displayed on this page
-current_tags: the tags enabled on this page
-page_date: the date we are looking at
-page_num: the current page number
-pages: a list of the numbers from 1 to the number of pages to be
-displayed
-page_less: the previous page number
-page_more: the next page number
-browsing: the boolean stating to the header that we are browsing (the
-top button)
-browse_bar: the boolean stating to the header that we want a nav list
-of dates in the header
-{% endcomment %}
 {% block title %} 
     &gt; Browse {% if page_date != "flow" %}&gt; {{page_date|slug_to_title }}{% endif %}
 {% endblock %}
@@ -50,6 +36,7 @@ of dates in the header
           fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
+
     {% if messages %}
         <div class="msg">
             <ul class="messages">
@@ -83,6 +70,13 @@ of dates in the header
                                     <div class="main-navigation-content-nav-wrapper">
                                         <!--start.schedule-bar-->
                                         {% include 'events/_searchpad_datetime_menu.html' %}
+
+                                        <ul id="searchTags">
+                                            {% for tag in eventsFilter.search_tags %}
+                                                <li data-remove-url="{{ tag.remove_url }}">{{ tag.name }}</li>
+                                            {% endfor %}
+                                            <span class="search-button"></span>
+                                        </ul>
                                         <!--end.schedule-bar-->
                           
                                         <!--start.entry-wrapper-->
